organized imgages of teacher flip

--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -1432,68 +1432,84 @@ li {
   .teacher-list .teacher-grid {
     display: -ms-flexbox;
     display: flex;
-    -ms-flex: 50%;
-        flex: 50%;
-    -ms-flex-direction: row;
-        flex-direction: row;
     -ms-flex-wrap: wrap;
-        flex-wrap: wrap; }
-  .teacher-list .flip-container {
-    display: -ms-flexbox;
-    display: flex;
-    box-shadow: inset 1px 1px 40px 0 rgba(0, 0, 0, 0.45);
-    background: #aff1d3;
-    border-radius: 50%; }
-    .teacher-list .flip-container .flipper {
-      -ms-flex: 1 0 auto;
-          flex: 1 0 auto;
+        flex-wrap: wrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around; }
+    .teacher-list .teacher-grid .member-block {
+      -ms-flex: .03;
+          flex: .03;
       display: -ms-flexbox;
       display: flex;
-      width: 50%;
-      position: relative;
-      -webkit-transition: 1.9s;
-      -webkit-transform-style: preserve-3d;
-      -moz-transition: 1.9s;
-      -moz-transform-style: preserve-3d;
-      transition: 1.9s;
-      transform-style: preserve-3d; }
-      .teacher-list .flip-container .flipper p {
-        font-size: 50%;
-        line-height: 30px; }
-    .teacher-list .flip-container .front {
-      position: absolute;
-      background-size: cover;
-      border-radius: 50%;
-      -ms-flex: 2;
-          flex: 2; }
-      .teacher-list .flip-container .front img {
-        border-radius: 50%; }
-    .teacher-list .flip-container .back {
-      border-radius: 50%;
-      position: absolute;
-      width: 125px;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      height: 125px;
-      text-align: center;
-      right: 3px;
+      -ms-flex-direction: column;
+          flex-direction: column;
+      -ms-flex-align: center;
+          align-items: center; }
+      @media (min-width: 37.5rem) {
+        .teacher-list .teacher-grid .member-block {
+          -ms-flex: .03;
+              flex: .03; } }
+      @media (min-width: 60rem) {
+        .teacher-list .teacher-grid .member-block {
+          -ms-flex: 1;
+              flex: 1; } }
+    .teacher-list .teacher-grid .flip-container {
+      display: block;
+      box-shadow: inset 1px 1px 40px 0 rgba(0, 0, 0, 0.45);
+      background: #aff1d3;
+      border-radius: 50%; }
+      .teacher-list .teacher-grid .flip-container .flipper {
+        -ms-flex: 1 0 auto;
+            flex: 1 0 auto;
+        display: -ms-flexbox;
+        display: flex;
+        width: 50%;
+        position: relative;
+        -webkit-transition: 1.9s;
+        -webkit-transform-style: preserve-3d;
+        -moz-transition: 1.9s;
+        -moz-transform-style: preserve-3d;
+        transition: 1.9s;
+        transform-style: preserve-3d; }
+        .teacher-list .teacher-grid .flip-container .flipper .teacher_det {
+          display: block; }
+        .teacher-list .teacher-grid .flip-container .flipper p {
+          font-size: 50%;
+          line-height: 30px; }
+      .teacher-list .teacher-grid .flip-container .front {
+        position: absolute;
+        background-size: cover;
+        border-radius: 50%;
+        -ms-flex: 2;
+            flex: 2; }
+        .teacher-list .teacher-grid .flip-container .front img {
+          border-radius: 50%; }
+      .teacher-list .teacher-grid .flip-container .back {
+        border-radius: 50%;
+        position: absolute;
+        width: 125px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        height: 125px;
+        text-align: center;
+        right: 3px;
+        transform: rotateY(180deg); }
+    .teacher-list .teacher-grid .flip-container.hover .flipper,
+    .teacher-list .teacher-grid .flip-container:hover .flipper {
       transform: rotateY(180deg); }
-  .teacher-list .flip-container.hover .flipper,
-  .teacher-list .flip-container:hover .flipper {
-    transform: rotateY(180deg); }
-  .teacher-list .back,
-  .teacher-list .flip-container,
-  .teacher-list .front {
-    width: 125px;
-    height: 125px; }
-  .teacher-list .back,
-  .teacher-list .front {
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden; }
-  .teacher-list .teacher_det {
-    text-align: center; }
-    .teacher-list .teacher_det p {
-      font-size: 50%; }
+    .teacher-list .teacher-grid .back,
+    .teacher-list .teacher-grid .flip-container,
+    .teacher-list .teacher-grid .front {
+      width: 125px;
+      height: 125px; }
+    .teacher-list .teacher-grid .back,
+    .teacher-list .teacher-grid .front {
+      -webkit-backface-visibility: hidden;
+      backface-visibility: hidden; }
+    .teacher-list .teacher-grid .teacher_det {
+      text-align: center; }
+      .teacher-list .teacher-grid .teacher_det p {
+        font-size: 50%; }
 
 .red-border-container {
   width: 95%;
