--- a/themes/montessori-theme/sass/_nw-program.scss
+++ b/themes/montessori-theme/sass/_nw-program.scss
@@ -135,19 +135,33 @@ flex-direction: column;
 	padding: 2px;
 	flex-wrap: wrap;
 	display: flex;
-
-	.teacher-grid {
+	.teacher-grid{
 		display: flex;
-		flex: 50%;
-		flex-direction: row;
 		flex-wrap: wrap;
+		justify-content: space-around;
+
+
+
+	.member-block {
+		flex: .03;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		@include tablet{
+			flex: .03;
+    }
+		@include desktop{
+			flex: 1;
+		}
 	}
 
+
 	.flip-container {
-		display: flex;
+		display: block;
 		box-shadow: inset 1px 1px 40px 0 rgba(0,0,0,.45);
 		background: #aff1d3;
 		border-radius: 50%;
+
 
 		.flipper {
 			flex: 1 0 auto;
@@ -160,6 +174,9 @@ flex-direction: column;
 			-moz-transform-style: preserve-3d;
 			transition: 1.9s;
 			transform-style: preserve-3d;
+			.teacher_det{
+				display: block;
+			}
 
 			p {
 				font-size: 50%;
@@ -221,4 +238,5 @@ flex-direction: column;
 			font-size: 50%;
 		}
 	}
+}
 }
