--- a/themes/montessori-theme/sass/_extra.scss
+++ b/themes/montessori-theme/sass/_extra.scss
@@ -1,6 +1,6 @@
 
 .red-border-container{
-width: 95%;
+width: 90%;
 height: 160px;
 display: inline-block;
 margin-bottom: 100px;
@@ -24,11 +24,12 @@ p{
   margin: 0px auto;
 }
 .content-wrapper{
- border-bottom: solid 3px $color_btn_green;
-	max-width: 90%;
+ border-bottom: solid 4px $color_btn_green;
+	max-width: 85%;
 	margin: 0 auto;
-	overflow: auto;
-  padding: 40px 0;
+  overflow: hidden;
+  height: 100%;
+  padding: 30px 0;
 }
 
 body{
