--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -662,7 +662,7 @@ div .secondary {
     display: inline-block;
     padding: 10px; }
     div .secondary li a {
-      font-size: 1.3rem;
+      font-size: 1.6rem;
       text-decoration: none;
       color: white; }
 
@@ -1179,17 +1179,18 @@ body {
 --------------------------------------------------------------*/
 body p,
 li {
-  font-size: 1.3rem; }
+  font-size: 1.6rem; }
 
 .history-content {
-  width: 100%;
-  -ms-flex-wrap: wrap-reverse;
-      flex-wrap: wrap-reverse; }
+  width: 80%;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-left: 30px; }
 
 .history-title {
   margin-bottom: 0;
-  -ms-flex: 0 70%;
-      flex: 0 70%; }
+  -ms-flex: 0 90%;
+      flex: 0 90%; }
 
 .main-history {
   display: flex;
@@ -1198,16 +1199,22 @@ li {
       align-items: flex-end;
   -ms-flex-pack: justify;
       justify-content: space-between; }
+  .main-history p:nth-child(4) {
+    margin-left: -40%;
+    overflow: visible; }
+    @media (min-width: 60rem) {
+      .main-history p:nth-child(4) {
+        margin-left: 0px; } }
   .main-history .history-img {
     -ms-flex-item-align: start;
         align-self: flex-start;
     margin-top: 100px;
-    width: 190px;
-    height: 219px; }
+    width: 220px;
+    height: 240px; }
     @media (min-width: 60rem) {
       .main-history .history-img {
-        width: 350px;
-        height: auto;
+        width: 430px;
+        height: 500px;
         padding-bottom: 40px; } }
     .main-history .history-img img {
       width: 100%;
@@ -1216,7 +1223,7 @@ li {
     .main-history {
       font-size: 1.5rem; }
       .main-history .red-border-q {
-        width: 60%;
+        width: 70%;
         top: 10px;
         margin: 0 0 0 10%;
         padding-left: 25px;
@@ -1225,6 +1232,7 @@ li {
         font-size: 1.2rem;
         font-weight: bold; }
         .main-history .red-border-q p {
+          overflow: visible;
           margin: 0; }
       .main-history .red-border-q ::before {
         content: "";
@@ -1374,9 +1382,20 @@ li {
           background-color: #fff;
           transform: rotateY(180deg); } }
 
+@media (min-width: 60rem) {
+  .main-materials div:nth-of-type(3) {
+    -ms-flex-direction: row-reverse;
+        flex-direction: row-reverse; } }
+
 .materials {
   margin-top: 60px;
-  width: 95%; }
+  width: 100%;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  -ms-flex-align: center;
+      align-items: center; }
   @media (min-width: 60rem) {
     .materials {
       display: flex;
@@ -1384,22 +1403,23 @@ li {
       -ms-flex-align: start;
           align-items: flex-start;
       -ms-flex-pack: justify;
-          justify-content: space-between; } }
-
-.materials-img img {
-  width: 300px;
-  height: 300px; }
-  @media (min-width: 60rem) {
-    .materials-img img {
-      -ms-flex-item-align: start;
-          align-self: flex-start;
-      margin-top: 40px;
-      width: 350px;
-      height: 350px; } }
+          justify-content: space-between;
+      -ms-flex-direction: row;
+          flex-direction: row;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap; } }
+  .materials img {
+    width: 230px;
+    height: 230px; }
+    @media (min-width: 60rem) {
+      .materials img {
+        margin: 40px 0 0 40px;
+        width: 300px;
+        height: 300px; } }
 
 @media (min-width: 60rem) {
   .materials-contents {
-    width: 70%;
+    width: 60%;
     font-size: 1.5rem; }
     .materials-contents .red-border-q {
       width: 75%;
@@ -1421,6 +1441,15 @@ li {
       height: 100%;
       border-left: solid 8px #D93B57; } }
 
+.materials-grid img:nth-of-type(2) {
+  -ms-flex-item-align: left;
+      -ms-grid-row-align: left;
+      align-self: left; }
+
+.materials-grid {
+  margin: 0px;
+  padding: 0px; }
+
 .benefits li {
   list-style-type: disc; }
 
@@ -1429,18 +1458,18 @@ li {
   height: 100%;
   display: flex;
   display: -ms-flexbox;
-  -ms-flex-align: start;
-      align-items: flex-start;
+  -ms-flex-align: center;
+      align-items: center;
   -ms-flex-pack: justify;
       justify-content: space-between; }
-  .first-benefits-section .benefits-img {
+  .first-benefits-section img {
     -ms-flex-item-align: start;
         align-self: flex-start;
-    width: 220px;
-    height: 220px;
+    width: 250px;
+    height: 250px;
     margin-top: 30px; }
     @media (min-width: 60rem) {
-      .first-benefits-section .benefits-img {
+      .first-benefits-section img {
         width: 350px;
         height: 350px;
         padding-bottom: 40px; } }
@@ -1512,7 +1541,7 @@ li {
       align-items: center; }
   .about-wrapper h1 {
     font-family: "Asap";
-    font-size: 2.5rem;
+    font-size: 4rem;
     font-weight: normal;
     line-height: 2.625rem;
     text-align: left;
@@ -1624,7 +1653,7 @@ site-main .a green-btn {
   background-color: grey; }
   .nw-program-wrapper h1 {
     font-family: "Asap";
-    font-size: 2.5rem;
+    font-size: 4rem;
     font-weight: normal;
     line-height: 2.625rem;
     text-align: left;
@@ -1792,7 +1821,7 @@ site-main .a green-btn {
       font-size: 50%; }
 
 .red-border-container {
-  width: 95%;
+  width: 90%;
   height: 160px;
   display: inline-block;
   margin-bottom: 100px;
@@ -1810,8 +1839,9 @@ site-main .a green-btn {
   margin: 0px auto; }
 
 .content-wrapper {
-  border-bottom: solid 3px #4FC8A1;
-  max-width: 90%;
+  border-bottom: solid 4px #4FC8A1;
+  max-width: 85%;
   margin: 0 auto;
-  overflow: auto;
-  padding: 40px 0; }
+  overflow: hidden;
+  height: 100%;
+  padding: 30px 0; }
